--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
   <header>
     <div>
@@ -35,13 +35,16 @@
   </header>
 
   <main>
-    hola
+    <div id="main-cursor"></div>
+    <div id="follow-cursor"></div>
   </main>
 
   <footer>
-    <a href="">
-      contacto
-    </a>
+    <div class="link-rojo">
+      <a href="">
+        contacto
+      </a>
+    </div>
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
