--- a/index.html
+++ b/index.html
@@ -34,9 +34,21 @@
     </a>
   </header>
 
-  <main>
+  <main class="main-home">
     <div id="main-cursor"></div>
     <div id="follow-cursor"></div>
+    <picture class="draggable">
+      <source media='(min-width: 500px)' srcset='images/1.png'/>
+      <img src="images/1.png" alt="">
+    </picture>
+    <picture class="draggable">
+      <source media='(min-width: 500px)' srcset='images/2.png'/>
+      <img src="images/2.png" alt="">
+    </picture>
+    <picture class="draggable">
+      <source media='(min-width: 500px)' srcset='images/3.png'/>
+      <img src="images/3.png" alt="">
+    </picture>
   </main>
 
   <footer>
