--- a/index.html
+++ b/index.html
@@ -37,18 +37,24 @@
   <main class="main-home">
     <div id="main-cursor"></div>
     <div id="follow-cursor"></div>
-    <picture class="draggable">
-      <source media='(min-width: 500px)' srcset='images/1.png'/>
-      <img src="images/1.png" alt="">
-    </picture>
-    <picture class="draggable">
-      <source media='(min-width: 500px)' srcset='images/2.png'/>
-      <img src="images/2.png" alt="">
-    </picture>
-    <picture class="draggable">
-      <source media='(min-width: 500px)' srcset='images/3.png'/>
-      <img src="images/3.png" alt="">
-    </picture>
+    <div class="home-photo">
+      <picture class="draggable">
+        <source media='(min-width: 500px)' srcset='images/1.png'/>
+        <img src="images/1.png" alt="">
+      </picture>  
+    </div>
+    <div class="home-photo">
+      <picture class="draggable">
+        <source media='(min-width: 500px)' srcset='images/2.png'/>
+        <img src="images/2.png" alt="">
+      </picture>
+    </div>
+    <div class="home-photo">
+      <picture class="draggable">
+        <source media='(min-width: 500px)' srcset='images/3.png'/>
+        <img src="images/3.png" alt="">
+      </picture>
+    </div>
   </main>
 
   <footer>
