--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <!-- Add your site or application content here -->
   <header>
     <div>
-      dafna szleifer
+      <a href="# ">
+        dafna szleifer
+      </a>
     </div>
     <a href="">
       catálogo
