--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
 <body>
   <!-- Add your site or application content here -->
   <header>
-    <div>
-      <a href="# ">
+    <div class="link logo">
+      <a href="#">
         dafna szleifer
       </a>
     </div>
-    <a href="">
-      catálogo
-    </a>
+    <div class="link azul">
+      <a href="#">
+        catálogo
+      </a>  
+    </div>
   </header>
 
   <main class="main-home">
@@ -60,11 +62,12 @@
   </main>
 
   <footer>
-    <div class="link-rojo">
-      <a href="">
+    <div class="link rojo">
+      <a href="#">
         contacto
       </a>
     </div>
+
   </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
