--- a/catalogo.html
+++ b/catalogo.html
@@ -26,42 +26,56 @@
 <body>
   <!-- Add your site or application content here -->
   <header>
-    <a href="" class="link logo">
+    <div class="link logo">
+      <a href="index.html">
         dafna szleifer
-    </a>
-    <a href="catalogo.html" class="link azul">
-      catálogo
-    </a>
-
+      </a>
+    </div>
+    <div class="link azul">
+      <a href="#">
+        catálogo (acá estamos)
+      </a>  
+    </div>
   </header>
 
-  <main class="main-home">
+  <main class="main-catalogo">
     <div id="main-cursor"></div>
     <div id="follow-cursor"></div>
-    <div class="home-photo">
-      <picture class="draggable vibrar">
-        <source media='(min-width: 500px)' srcset='images/1.png'/>
-        <img src="images/1.png" alt="">
-      </picture>  
+
+    <div class="criteria">
+      <button type="button">
+        todas
+      </button>
+
+      <div class="filtro">
+        playa
+      </div>
+      <div class="filtro">
+        perros
+      </div>
+      <div class="filtro">
+        viejxs
+      </div>
     </div>
-    <div class="home-photo">
-      <picture class="draggable vibrar">
-        <source media='(min-width: 500px)' srcset='images/2.png'/>
-        <img src="images/2.png" alt="">
-      </picture>
+
+    <div class="grilla-fotos">
+      <img src="images/1.png" alt="" class="todas playa">
+      <img src="images/2.png" alt="" class="todas">
+      <img src="images/3.png" alt="" class="todas playa">
+      <img src="images/4.png" alt="" class="todas">
+      <img src="images/5.png" alt="" class="todas">
+      <img src="images/6.png" alt="" class="todas playa">
+      <img src="images/7.png" alt="" class="todas">
+      <img src="images/8.png" alt="" class="todas">
+
     </div>
-    <div class="home-photo">
-      <picture class="draggable vibrar">
-        <source media='(min-width: 500px)' srcset='images/3.png'/>
-        <img src="images/3.png" alt="">
-      </picture>
-    </div>
+
   </main>
 
   <footer>
     <div class="link rojo">
       <a href="#">
-        info
+        contacto
       </a>
     </div>
 
