--- a/catalogo.html
+++ b/catalogo.html
@@ -43,29 +43,32 @@
     <div id="follow-cursor"></div>
 
     <div class="criteria">
-      <button type="button">
+      <button type="button" class="filtro current">
         todas
       </button>
 
-      <div class="filtro">
+      <button type="button" class="filtro">
         playa
-      </div>
-      <div class="filtro">
+      </button>
+
+      <button type="button" class="filtro">
         perros
-      </div>
-      <div class="filtro">
-        viejxs
-      </div>
+      </button>
+
+      <button type="button" class="filtro">
+        señorxs
+      </button>
+
     </div>
 
-    <div class="grilla-fotos">
+    <div class="grilla-fotos fade-in">
       <img src="images/1.png" alt="" class="todas playa">
-      <img src="images/2.png" alt="" class="todas">
-      <img src="images/3.png" alt="" class="todas playa">
-      <img src="images/4.png" alt="" class="todas">
-      <img src="images/5.png" alt="" class="todas">
-      <img src="images/6.png" alt="" class="todas playa">
-      <img src="images/7.png" alt="" class="todas">
+      <img src="images/2.png" alt="" class="todas perros">
+      <img src="images/3.png" alt="" class="todas playa señorxs">
+      <img src="images/4.png" alt="" class="todas señorxs">
+      <img src="images/5.png" alt="" class="todas señorxs perros">
+      <img src="images/6.png" alt="" class="todas playa señorxs">
+      <img src="images/7.png" alt="" class="todas señorxs">
       <img src="images/8.png" alt="" class="todas">
 
     </div>
