--- a/catalogo.html
+++ b/catalogo.html
@@ -43,26 +43,26 @@
     <div id="follow-cursor"></div>
 
     <div class="criteria">
-      <button type="button" class="filtro current">
+      <button type="button" class="filter current">
         todas
       </button>
 
-      <button type="button" class="filtro">
+      <button type="button" class="filter">
         playa
       </button>
 
-      <button type="button" class="filtro">
+      <button type="button" class="filter">
         perros
       </button>
 
-      <button type="button" class="filtro">
+      <button type="button" class="filter">
         señorxs
       </button>
 
     </div>
 
     <div class="grilla-fotos fade-in">
-      <img src="images/1.png" alt="" class="todas playa">
+      <img src="images/1.png" alt="" class="todas playa" data-tooltip="© 2022 Dafna Szleifer">
       <img src="images/2.png" alt="" class="todas perros">
       <img src="images/3.png" alt="" class="todas playa señorxs">
       <img src="images/4.png" alt="" class="todas señorxs">
@@ -70,7 +70,6 @@
       <img src="images/6.png" alt="" class="todas playa señorxs">
       <img src="images/7.png" alt="" class="todas señorxs">
       <img src="images/8.png" alt="" class="todas">
-
     </div>
 
   </main>
