--- a/catalogo.html
+++ b/catalogo.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="grilla-fotos fade-in">
-      <img src="images/1.png" alt="" class="todas playa" data-tooltip="© 2022 Dafna Szleifer">
+      <img src="images/1.png" alt="" class="todas playa">
       <img src="images/2.png" alt="" class="todas perros">
       <img src="images/3.png" alt="" class="todas playa señorxs">
       <img src="images/4.png" alt="" class="todas señorxs">
