--- a/catalogo.html
+++ b/catalogo.html
@@ -70,6 +70,7 @@
       <img src="images/6.png" alt="" class="todas playa señorxs">
       <img src="images/7.png" alt="" class="todas señorxs">
       <img src="images/8.png" alt="" class="todas">
+      <div class="foteli" backg></div>
     </div>
 
   </main>
