--- a/catalogo.html
+++ b/catalogo.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>catálogo</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -42,24 +42,31 @@
     <div id="main-cursor"></div>
     <div id="follow-cursor"></div>
 
-    <div class="criteria">
-      <button type="button" class="filter current">
-        todas
-      </button>
+    <ul class="filters-list">
+      <li>
+        <button type="button" class="filter current">
+          todas
+        </button>  
+      </li>
 
-      <button type="button" class="filter">
-        playa
-      </button>
+      <li>
+        <button type="button" class="filter">
+          playa
+        </button>  
+      </li>
 
-      <button type="button" class="filter">
-        perros
-      </button>
+      <li>
+        <button type="button" class="filter">
+          perros
+        </button>  
+      </li>
 
-      <button type="button" class="filter">
-        señorxs
-      </button>
-
-    </div>
+      <li>
+        <button type="button" class="filter">
+          señorxs
+        </button>  
+      </li>
+    </ul>
 
     <div class="grilla-fotos fade-in">
       <img src="images/1.png" alt="" class="todas playa">
@@ -70,7 +77,6 @@
       <img src="images/6.png" alt="" class="todas playa señorxs">
       <img src="images/7.png" alt="" class="todas señorxs">
       <img src="images/8.png" alt="" class="todas">
-      <div class="foteli" backg></div>
     </div>
 
   </main>
