--- a/catalogo.html
+++ b/catalogo.html
@@ -55,7 +55,7 @@
         </li>
       </ul>
 
-      <div class="grilla-fotos fade-in">
+      <div class="grilla-fotos">
         <img src="images/1.png" alt="" class="todas playa" />
         <img src="images/2.png" alt="" class="todas perros" />
         <img src="images/3.png" alt="" class="todas playa señorxs" />
@@ -66,6 +66,15 @@
         <img src="images/8.png" alt="" class="todas" />
       </div>
     </main>
+
+    <div id="carousel">
+      <div id="slider">
+        <button class="carousel-button" data-direction="previous">&#60;</button>
+        <div class="current-slide"></div>
+        <button class="carousel-button" data-direction="next">&#62;</button>
+      </div>
+      <button id="carousel-close">&#215;</button>
+    </div>
 
     <footer>
       <div class="link rojo">
