mejoras en el slider

--- a/catalogo.html
+++ b/catalogo.html
@@ -67,11 +67,13 @@
       </div>
     </main>
 
-    <div id="carousel">
-      <div id="slider">
-        <button class="carousel-button" data-direction="previous">&#60;</button>
-        <div class="current-slide"></div>
-        <button class="carousel-button" data-direction="next">&#62;</button>
+    <div id="carousel-window">
+      <div id="carousel">
+        <button class="carousel-navigation" data-direction="previous">
+          &#60;
+        </button>
+        <div class="slide-wrapper"></div>
+        <button class="carousel-navigation" data-direction="next">&#62;</button>
       </div>
       <button id="carousel-close">&#215;</button>
     </div>
