--- a/catalogo.html
+++ b/catalogo.html
@@ -29,7 +29,7 @@
         <a href="index.html"> dafna szleifer </a>
       </div>
       <div class="link azul">
-        <a href="#"> catálogo (acá estamos) </a>
+        <a href="#"> catálogo (decidir estilo) </a>
       </div>
     </header>
 
