--- a/catalogo.html
+++ b/catalogo.html
@@ -39,11 +39,11 @@
 
       <ul class="filters-list">
         <li>
-          <button type="button" class="filter current">todas</button>
+          <button type="button" class="filter current link">todas</button>
         </li>
 
         <li>
-          <button type="button" class="filter">playa</button>
+          <button type="button" class="filter link">playa</button>
         </li>
 
         <li>
@@ -64,6 +64,31 @@
         <img src="images/6.png" alt="" class="todas playa señorxs" />
         <img src="images/7.png" alt="" class="todas señorxs" />
         <img src="images/8.png" alt="" class="todas" />
+
+        <img src="images/1.png" alt="" class="todas playa" />
+        <img src="images/2.png" alt="" class="todas perros" />
+        <img src="images/3.png" alt="" class="todas playa señorxs" />
+        <img src="images/4.png" alt="" class="todas señorxs" />
+        <img src="images/5.png" alt="" class="todas señorxs perros" />
+        <img src="images/6.png" alt="" class="todas playa señorxs" />
+        <img src="images/7.png" alt="" class="todas señorxs" />
+        <img src="images/8.png" alt="" class="todas" />
+        <img src="images/1.png" alt="" class="todas playa" />
+        <img src="images/2.png" alt="" class="todas perros" />
+        <img src="images/3.png" alt="" class="todas playa señorxs" />
+        <img src="images/4.png" alt="" class="todas señorxs" />
+        <img src="images/5.png" alt="" class="todas señorxs perros" />
+        <img src="images/6.png" alt="" class="todas playa señorxs" />
+        <img src="images/7.png" alt="" class="todas señorxs" />
+        <img src="images/8.png" alt="" class="todas" />
+        <img src="images/1.png" alt="" class="todas playa" />
+        <img src="images/2.png" alt="" class="todas perros" />
+        <img src="images/3.png" alt="" class="todas playa señorxs" />
+        <img src="images/4.png" alt="" class="todas señorxs" />
+        <img src="images/5.png" alt="" class="todas señorxs perros" />
+        <img src="images/6.png" alt="" class="todas playa señorxs" />
+        <img src="images/7.png" alt="" class="todas señorxs" />
+        <img src="images/8.png" alt="" class="todas" />
       </div>
     </main>
 
@@ -73,7 +98,9 @@
           &#60;
         </button>
         <div class="slide-wrapper"></div>
-        <button class="carousel-navigation" data-direction="next">&#62;</button>
+        <button class="carousel-navigation" data-direction="next">
+          &#8679;
+        </button>
       </div>
       <button id="carousel-close">&#215;</button>
     </div>
