--- a/catalogo.html
+++ b/catalogo.html
@@ -28,8 +28,8 @@
       <div class="link logo">
         <a href="index.html"> dafna szleifer </a>
       </div>
-      <div class="link azul">
-        <a href="#"> catálogo (decidir estilo) </a>
+      <div class="link azul catalogo">
+        <a href="#"> catálogo</a>
       </div>
     </header>
 
@@ -55,6 +55,7 @@
         </li>
       </ul>
 
+      <!-- version flexbox
       <div class="grilla-fotos">
         <img src="images/1.png" alt="" class="todas playa" />
         <img src="images/2.png" alt="" class="todas perros" />
@@ -64,38 +65,138 @@
         <img src="images/6.png" alt="" class="todas playa señorxs" />
         <img src="images/7.png" alt="" class="todas señorxs" />
         <img src="images/8.png" alt="" class="todas" />
+        <img src="images/1.png" alt="" class="todas playa" />
+        <img src="images/2.png" alt="" class="todas perros" />
+        <img src="images/3.png" alt="" class="todas playa señorxs" />
+        <img src="images/4.png" alt="" class="todas señorxs" />
+        <img src="images/5.png" alt="" class="todas señorxs perros" />
+        <img src="images/6.png" alt="" class="todas playa señorxs" />
+        <img src="images/7.png" alt="" class="todas señorxs" />
+        <img src="images/8.png" alt="" class="todas" />
+        <img src="images/1.png" alt="" class="todas playa" />
+        <img src="images/2.png" alt="" class="todas perros" />
+        <img src="images/3.png" alt="" class="todas playa señorxs" />
+        <img src="images/4.png" alt="" class="todas señorxs" />
+        <img src="images/5.png" alt="" class="todas señorxs perros" />
+        <img src="images/6.png" alt="" class="todas playa señorxs" />
+        <img src="images/7.png" alt="" class="todas señorxs" />
+        <img src="images/8.png" alt="" class="todas" />
+        <img src="images/1.png" alt="" class="todas playa" />
+        <img src="images/2.png" alt="" class="todas perros" />
+        <img src="images/3.png" alt="" class="todas playa señorxs" />
+        <img src="images/4.png" alt="" class="todas señorxs" />
+        <img src="images/5.png" alt="" class="todas señorxs perros" />
+        <img src="images/5.png" alt="" class="todas señorxs perros" />
+        <img src="images/7.png" alt="" class="todas señorxs" />
+        <img src="images/8.png" alt="" class="todas" />
+      </div> -->
 
-        <img src="images/1.png" alt="" class="todas playa" />
-        <img src="images/2.png" alt="" class="todas perros" />
-        <img src="images/3.png" alt="" class="todas playa señorxs" />
-        <img src="images/4.png" alt="" class="todas señorxs" />
-        <img src="images/5.png" alt="" class="todas señorxs perros" />
-        <img src="images/6.png" alt="" class="todas playa señorxs" />
-        <img src="images/7.png" alt="" class="todas señorxs" />
-        <img src="images/8.png" alt="" class="todas" />
-        <img src="images/1.png" alt="" class="todas playa" />
-        <img src="images/2.png" alt="" class="todas perros" />
-        <img src="images/3.png" alt="" class="todas playa señorxs" />
-        <img src="images/4.png" alt="" class="todas señorxs" />
-        <img src="images/5.png" alt="" class="todas señorxs perros" />
-        <img src="images/6.png" alt="" class="todas playa señorxs" />
-        <img src="images/7.png" alt="" class="todas señorxs" />
-        <img src="images/8.png" alt="" class="todas" />
-        <img src="images/1.png" alt="" class="todas playa" />
-        <img src="images/2.png" alt="" class="todas perros" />
-        <img src="images/3.png" alt="" class="todas playa señorxs" />
-        <img src="images/4.png" alt="" class="todas señorxs" />
-        <img src="images/5.png" alt="" class="todas señorxs perros" />
-        <img src="images/6.png" alt="" class="todas playa señorxs" />
-        <img src="images/7.png" alt="" class="todas señorxs" />
-        <img src="images/8.png" alt="" class="todas" />
+      <!-- version grid -->
+      <div class="grilla-fotos">
+        <div class="foto">
+          <img src="images/1.png" alt="" class="todas playa" />
+        </div>
+        <div class="foto">
+          <img src="images/2.png" alt="" class="todas perros" />
+        </div>
+        <div class="foto">
+          <img src="images/3.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/4.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/5.png" alt="" class="todas señorxs perros" />
+        </div>
+        <div class="foto">
+          <img src="images/6.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/7.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/8.png" alt="" class="todas" />
+        </div>
+
+        <div class="foto">
+          <img src="images/1.png" alt="" class="todas playa" />
+        </div>
+        <div class="foto">
+          <img src="images/2.png" alt="" class="todas perros" />
+        </div>
+        <div class="foto">
+          <img src="images/3.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/4.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/5.png" alt="" class="todas señorxs perros" />
+        </div>
+        <div class="foto">
+          <img src="images/6.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/7.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/8.png" alt="" class="todas" />
+        </div>
+        <div class="foto">
+          <img src="images/1.png" alt="" class="todas playa" />
+        </div>
+        <div class="foto">
+          <img src="images/2.png" alt="" class="todas perros" />
+        </div>
+        <div class="foto">
+          <img src="images/3.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/4.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/5.png" alt="" class="todas señorxs perros" />
+        </div>
+        <div class="foto">
+          <img src="images/6.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/7.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/8.png" alt="" class="todas" />
+        </div>
+        <div class="foto">
+          <img src="images/1.png" alt="" class="todas playa" />
+        </div>
+        <div class="foto">
+          <img src="images/2.png" alt="" class="todas perros" />
+        </div>
+        <div class="foto">
+          <img src="images/3.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/4.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/5.png" alt="" class="todas señorxs perros" />
+        </div>
+        <div class="foto">
+          <img src="images/6.png" alt="" class="todas playa señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/7.png" alt="" class="todas señorxs" />
+        </div>
+        <div class="foto">
+          <img src="images/8.png" alt="" class="todas" />
+        </div>
       </div>
     </main>
 
     <div id="carousel-window">
       <div id="carousel">
         <button class="carousel-navigation" data-direction="previous">
-          &#60;
+          &#8679;
         </button>
         <div class="slide-wrapper"></div>
         <button class="carousel-navigation" data-direction="next">
@@ -107,7 +208,7 @@
 
     <footer>
       <div class="link rojo">
-        <a href="#"> contacto </a>
+        <a href="#"> info </a>
       </div>
     </footer>
 
