--- a/catalogo.html
+++ b/catalogo.html
@@ -208,7 +208,7 @@
 
     <footer>
       <div class="link rojo">
-        <a href="#"> info </a>
+        <a href="info.html"> info </a>
       </div>
     </footer>
 
