--- a/info.html
+++ b/info.html
@@ -22,41 +22,31 @@
     <meta name="theme-color" content="#fafafa" />
   </head>
 
-  <body class="body-home">
-    <!-- Add your site or application content here -->
+  <body class="body-info">
+    <div id="main-cursor"></div>
+    <div id="follow-cursor"></div>
+
     <header>
-      <a href="" class="link logo"> dafna szleifer </a>
+      <a href="index.html" class="link logo"> dafna szleifer </a>
       <a href="catalogo.html" class="link azul"> catálogo </a>
     </header>
 
-    <main class="main-home">
-      <div id="main-cursor"></div>
-      <div id="follow-cursor"></div>
-      <div class="home-photo">
-        <picture class="draggable vibrar">
-          <source media="(min-width: 500px)" srcset="images/1.png" />
-          <img src="images/1.png" alt="" />
-        </picture>
-      </div>
-      <div class="home-photo">
-        <picture class="draggable vibrar">
-          <source media="(min-width: 500px)" srcset="images/2.png" />
-          <img src="images/2.png" alt="" />
-        </picture>
-      </div>
-      <div class="home-photo">
-        <picture class="draggable vibrar">
-          <source media="(min-width: 500px)" srcset="images/3.png" />
-          <img src="images/3.png" alt="" />
-        </picture>
+    <main class="main-info">
+      <p id="bio">
+        Nací en Buenos Aires en 1994. Soy muy pelirroja y marplatense y me gusta
+        pavement.
+        <br />
+        <br />
+        Para impresiones, trabajos, pedidos, etc. escribime a
+        <a href="#" id="mail">dafiszlei@gmail.com</a>
+        <br />
+        <br />
+        instagram: <a href="instagram.com/dafnadafne" id="ig">@dafnadafne</a>
+      </p>
+      <div class="foto-bio">
+        <img src="/images/dafi-bio.png" alt="" />
       </div>
     </main>
-
-    <footer>
-      <div class="link rojo">
-        <a href="info.html"> info </a>
-      </div>
-    </footer>
 
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
