--- a/catalogo.html
+++ b/catalogo.html
@@ -39,11 +39,11 @@
 
       <ul class="filters-list">
         <li>
-          <button type="button" class="filter current link">todas</button>
+          <button type="button" class="filter current">todas</button>
         </li>
 
         <li>
-          <button type="button" class="filter link">playa</button>
+          <button type="button" class="filter">playa</button>
         </li>
 
         <li>
