--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
   </head>
 
   <body class="body-home">
-    <!-- Add your site or application content here -->
     <header>
-      <a href="" class="link logo"> dafna szleifer </a>
-      <a href="catalogo.html" class="link azul"> catálogo </a>
+      <a href="" class="link logo">dafna szleifer</a>
+      <a href="catalogo.html" class="link azul">catálogo</a>
     </header>
 
     <main class="main-home">
       <div id="main-cursor"></div>
       <div id="follow-cursor"></div>
-      <div class="home-photo">
+      <!-- <div class="home-photo">
         <picture class="draggable vibrar">
           <source media="(min-width: 500px)" srcset="images/1.png" />
           <img src="images/1.png" alt="" />
@@ -49,12 +48,12 @@
           <source media="(min-width: 500px)" srcset="images/3.png" />
           <img src="images/3.png" alt="" />
         </picture>
-      </div>
+      </div> -->
     </main>
 
     <footer>
       <div class="link rojo">
-        <a href="info.html"> info </a>
+        <a href="info.html">info</a>
       </div>
     </footer>
 
