--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta property="og:image" content="" />
 
     <link rel="manifest" href="site.webmanifest" />
-    <link rel="apple-touch-icon" href="icon.png" />
+    <!-- <link rel="apple-touch-icon" href="icon.png" /> -->
+    <link rel="icon" href="/icon.svg" type="image/svg+xml" />
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css" />
@@ -31,24 +32,6 @@
     <main class="main-home">
       <div id="main-cursor"></div>
       <div id="follow-cursor"></div>
-      <!-- <div class="home-photo">
-        <picture class="draggable vibrar">
-          <source media="(min-width: 500px)" srcset="images/1.png" />
-          <img src="images/1.png" alt="" />
-        </picture>
-      </div>
-      <div class="home-photo">
-        <picture class="draggable vibrar">
-          <source media="(min-width: 500px)" srcset="images/2.png" />
-          <img src="images/2.png" alt="" />
-        </picture>
-      </div>
-      <div class="home-photo">
-        <picture class="draggable vibrar">
-          <source media="(min-width: 500px)" srcset="images/3.png" />
-          <img src="images/3.png" alt="" />
-        </picture>
-      </div> -->
     </main>
 
     <footer>
