--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <meta property="og:image" content="" />
 
     <link rel="manifest" href="site.webmanifest" />
-    <!-- <link rel="apple-touch-icon" href="icon.png" /> -->
+    <link rel="apple-touch-icon" href="icon.png" />
     <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-    <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
